feat: native nats eventbus metrics and template customization
