# api/openapi-spec/swagger.json
@@ -166,6 +166,15 @@
         }
       }
     },
+    "io.argoproj.eventbus.v1alpha1.ContainerTemplate": {
+      "description": "ContainerTemplate defines customized spec for a container",
+      "type": "object",
+      "properties": {
+        "resources": {
+          "$ref": "#/definitions/io.k8s.api.core.v1.ResourceRequirements"
+        }
+      }
+    },
     "io.argoproj.eventbus.v1alpha1.EventBus": {
       "description": "EventBus is the definition of a eventbus resource",
       "type": "object",
@@ -295,6 +304,14 @@
         },
         "auth": {
           "type": "string"
+        },
+        "containerTemplate": {
+          "description": "ContainerTemplate contains some customized spec for NATS container",
+          "$ref": "#/definitions/io.argoproj.eventbus.v1alpha1.ContainerTemplate"
+        },
+        "metricsTemplate": {
+          "description": "MetricsTemplate refers whether expose metrics container, it also contains some customized spec for the container",
+          "$ref": "#/definitions/io.argoproj.eventbus.v1alpha1.ContainerTemplate"
         },
         "persistence": {
           "$ref": "#/definitions/io.argoproj.eventbus.v1alpha1.PersistenceStrategy"
